FMS-C11 Start working on the CardsService, move cards to server

--- a/fms-gui-client/src/app/cards/cards.component.html
+++ b/fms-gui-client/src/app/cards/cards.component.html
@@ -2,5 +2,13 @@
   <mat-toolbar>
     <span>{{ title }}</span>
   </mat-toolbar>
-  <!-- TODO: Display the cards from cards/status-panel -->
+  <div class="margin-side-1em">
+    TODO: Display the cards from cards/status-panel
+  </div>
+  <div *ngIf="cardsService.isDataPresent" class="margin-side-1em">
+    Cards are available
+  </div>
+  <div *ngIf="!cardsService.isDataPresent" class="margin-side-1em">
+    Cards not available
+  </div>
 </main>
