--- a/fms-gui-client/src/app/status-panel/status-panel.component.html
+++ b/fms-gui-client/src/app/status-panel/status-panel.component.html
@@ -2,12 +2,12 @@
   <mat-toolbar>
     <span>{{ title }}</span>
   </mat-toolbar>
-  <div *ngIf="fmsDataService.isFMSDataPresent" class="margin-side-1em">
+  <div *ngIf="fmsDataService.isDataPresent" class="margin-side-1em">
     <div id="status-panel">
       <!-- Contains the status bytes, which indicate if something is on or off -->
       <h2>Flags</h2>
       <div class="grid grid-cols-4 grid-gap-sm">
-        <div *ngFor='let item of FmsDataService.castToArrayNameValuePair(FmsDataService.getValue("status/flags"))'>
+        <div *ngFor='let item of Utils.castToArrayNameValuePair(FmsDataService.getValue("status/flags"))'>
           <span
             class="badge"
             [class.badge-success]="item.value"
@@ -17,5 +17,8 @@
         </div>
       </div>
     </div>
+  </div>
+  <div *ngIf="!fmsDataService.isDataPresent" class="margin-side-1em">
+    FMS Data not available
   </div>
 </main>
