--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -9,8 +9,11 @@
 $small: 500px;
 $medium: 800px;
 
-.flex-container {
+.flex-container, .flex-column, .flex-row {
   display: flex;
+}
+
+.flex-container {
   flex-flow: row wrap;
   justify-content: space-around;
 
@@ -19,6 +22,9 @@ $medium: 800px;
     flex-direction: column;
   }
 }
+
+.flex-column { flex-flow: column wrap; }
+.flex-row { flex-direction: row; }
 
 .margin-1em { margin: 1em; }
 .margin-side-1em { margin: 0 1em;}
