--- a/fms-gui-client/src/app/main/main.component.html
+++ b/fms-gui-client/src/app/main/main.component.html
@@ -1,79 +1,75 @@
 <main>
   <mat-toolbar>{{ title }}</mat-toolbar>
-  <mat-grid-list cols="2" rowHeight="500px" *ngIf="fmsDataService.isDataPresent">
-    <mat-grid-tile>
-      <mat-card id="connection">
-        <mat-card-header>
-          <mat-card-title>Connection</mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="block-children">
-          <button mat-button>Connect</button>
-          <button mat-button disabled>Disconnect</button>
-          <mat-form-field>
-            <mat-select placeholder="Placeholder">
-              <mat-option value="19200">19200</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-select placeholder="Placeholder port">
-              <mat-option value="usb0">/dev/ttyUSB0</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-select placeholder="Placeholder stage">
-              <mat-option value="upper-stage">Upper Stage</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-select placeholder="Placeholder 2">
-              <mat-option value="moros">Moros</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <mat-card id="status">
-        <mat-card-header>
-          <mat-card-title>Status</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <mat-list>
-            <mat-list-item>
-              <span>Timestamp</span>{{separator}}{{space}}{{FmsDataService.getValue("status/timestamp")}}
-            </mat-list-item>
-            <mat-list-item>
-              <span>CPU load</span>{{separator}}{{space}}{{FmsDataService.getValue("status/cpu load")}}
-            </mat-list-item>
-            <mat-list-item>
+  <div class="grid grid-cols-2" *ngIf="fmsDataService.isDataPresent">
+    <mat-card id="connection">
+      <mat-card-header>
+        <mat-card-title>Connection</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="block-children">
+        <button mat-button>Connect</button>
+        <button mat-button disabled>Disconnect</button>
+        <mat-form-field>
+          <mat-select placeholder="Placeholder">
+            <mat-option value="19200">19200</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-select placeholder="Placeholder port">
+            <mat-option value="usb0">/dev/ttyUSB0</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-select placeholder="Placeholder stage">
+            <mat-option value="upper-stage">Upper Stage</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-select placeholder="Placeholder 2">
+            <mat-option value="moros">Moros</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+    </mat-card>
+    <mat-card id="status">
+      <mat-card-header>
+        <mat-card-title>Status</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-list>
+          <mat-list-item>
+            <span>Timestamp</span>{{separator}}{{space}}{{FmsDataService.getValue("status/timestamp")}}
+          </mat-list-item>
+          <mat-list-item>
+            <span>CPU load</span>{{separator}}{{space}}{{FmsDataService.getValue("status/cpu load")}}
+          </mat-list-item>
+          <mat-list-item>
               <span class="badge"
-                [class.badge-danger]='!FmsDataService.getValue("status/flags/adc initialized")'
-                [class.badge-success]='FmsDataService.getValue("status/flags/adc initialized")'
+                    [class.badge-danger]='!FmsDataService.getValue("status/flags/adc initialized")'
+                    [class.badge-success]='FmsDataService.getValue("status/flags/adc initialized")'
               >&nbsp;</span>&nbsp;
-              <span>ADC</span>
-            </mat-list-item>
-            <mat-list-item>
+            <span>ADC</span>
+          </mat-list-item>
+          <mat-list-item>
               <span class="badge"
                     [class.badge-danger]='!FmsDataService.getValue("status/flags/dac initialized")'
                     [class.badge-success]='FmsDataService.getValue("status/flags/dac initialized")'
               >&nbsp;</span>&nbsp;
-              <span>DAC</span>
-            </mat-list-item>
-            <mat-list-item>
+            <span>DAC</span>
+          </mat-list-item>
+          <mat-list-item>
               <span class="badge"
                     [class.badge-danger]='!FmsDataService.getValue("status/flags/dma initialized")'
                     [class.badge-success]='FmsDataService.getValue("status/flags/dma initialized")'
               >&nbsp;</span>&nbsp;
-              <span>DMA</span>
-            </mat-list-item>
-            <mat-list-item>
-              <span>Flash</span>{{separator}}{{space}}{{FmsDataService.getValue("status/flash adr")}}% full
-            </mat-list-item>
-          </mat-list>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
+            <span>DMA</span>
+          </mat-list-item>
+          <mat-list-item>
+            <span>Flash</span>{{separator}}{{space}}{{FmsDataService.getValue("status/flash adr")}}% full
+          </mat-list-item>
+        </mat-list>
+      </mat-card-content>
+    </mat-card>
+  </div>
   <div *ngIf="!fmsDataService.isDataPresent" class="margin-side-1em">
     FMS Data not available
   </div>
