FMS-C12 Move controls to server, send dynamically the controls, add a simple loading screen

--- a/fms-gui-client/src/app/cards/cards.component.html
+++ b/fms-gui-client/src/app/cards/cards.component.html
@@ -18,7 +18,5 @@
       </mat-card>
     </div>
   </div>
-  <div *ngIf="!cardsService.isDataPresent" class="margin-side-1em">
-    Cards not available
-  </div>
+  <app-loading *ngIf="!cardsService.isDataPresent"></app-loading>
 </main>
