--- a/fms-gui-client/src/app/status-panel/status-panel.component.html
+++ b/fms-gui-client/src/app/status-panel/status-panel.component.html
@@ -18,7 +18,5 @@
       </div>
     </div>
   </div>
-  <div *ngIf="!fmsDataService.isDataPresent" class="margin-side-1em">
-    FMS Data not available
-  </div>
+  <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
 </main>
