--- a/fms-gui-client/src/app/main/main.component.html
+++ b/fms-gui-client/src/app/main/main.component.html
@@ -70,7 +70,5 @@
       </mat-card-content>
     </mat-card>
   </div>
-  <div *ngIf="!fmsDataService.isDataPresent" class="margin-side-1em">
-    FMS Data not available
-  </div>
+  <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
 </main>
