FMS-C18 Start working on changing the server connection, add TODO for error handling in case the server was not found

--- a/fms-gui-client/src/app/main/main.component.html
+++ b/fms-gui-client/src/app/main/main.component.html
@@ -12,7 +12,7 @@
           <mat-form-field>
             <mat-label>Host</mat-label>
             <label>
-              <input type="text" formControlName="host" matInput placeholder="http://localhost">
+              <input type="text" formControlName="host" matInput placeholder="localhost">
             </label>
           </mat-form-field>
 
