--- a/fms-gui-client/src/app/main/main.component.html
+++ b/fms-gui-client/src/app/main/main.component.html
@@ -36,7 +36,7 @@
           <div class="grid-cols-2">
             <!-- TODO: Implement me -->
             <!-- Disconnect -->
-            <!--<button mat-button disabled (click)="disconnect()">Disconnect</button>-->
+            <!-- <button mat-button type="reset" (click)="disconnect()">Disconnect</button> -->
 
           <!-- Connect -->
           <button mat-button type="submit" [disabled]="!addressForm.valid">Connect</button>
