FMS-C19 Create one super class for the general structure of services, relying on a websocket connection, make the websocket services non-static

--- a/fms-gui-client/src/app/alert/alert.component.html
+++ b/fms-gui-client/src/app/alert/alert.component.html
@@ -2,7 +2,7 @@
      [ngClass]="{
       'display-none': conditionError
      }" role="alert">
-  <div class="flex flex-space-between">
+  <div class="flex space-between">
     <mat-icon matListIcon aria-hidden="false" aria-label="Error icon">
       error_outline
     </mat-icon>
@@ -20,7 +20,7 @@
      [ngClass]="{
       'display-none': conditionSuccess
       }" role="alert">
-  <div class="flex flex-space-between">
+  <div class="flex space-between">
     <mat-icon matListIcon aria-hidden="false" aria-label="Success icon">
       check_circle_outline
     </mat-icon>
