--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -17,12 +17,14 @@ $medium: 800px;
   display: flex;
 }
 
-.flex {
+.flex, .flex-column, .flex-row {
   flex-flow: row wrap;
   justify-content: space-around;
 
   &.left { justify-content: flex-start; }
   &.right { justify-content: flex-end; }
+  &.center { justify-content: center; }
+  &.space-between { justify-content: space-between; }
 
   // Small screens
   @media all and (max-width: $small) {
@@ -32,10 +34,6 @@ $medium: 800px;
 
 .flex-column { flex-flow: column wrap; }
 .flex-row { flex-direction: row; }
-
-.flex-space-between {
-  justify-content: space-between;
-}
 
 .margin-1em { margin: 1em; }
 .margin-side-1em { margin: 0 1em;}
