--- a/fms-gui-client/src/app/controls/controls.component.html
+++ b/fms-gui-client/src/app/controls/controls.component.html
@@ -3,9 +3,9 @@
   <mat-toolbar>
     <span>{{ title }}</span>
   </mat-toolbar>
-  <div *ngIf="ControlService.isDataPresent">
+  <div *ngIf="controlService.isDataPresent">
     <div class="grid grid-cols-5">
-      <button mat-button *ngFor="let control of ControlService.getData()" (click)="onControlButtonClicked(control)">
+      <button mat-button *ngFor="let control of controlService.getData()" (click)="onControlButtonClicked(control)">
         <span>{{control.code}}</span>
         &nbsp;
         <span>{{control.name}}</span>
@@ -15,5 +15,5 @@
     </div>
   </div>
   <!-- Display Loading screen -->
-  <app-loading *ngIf="!ControlService.isDataPresent"></app-loading>
+  <app-loading *ngIf="!controlService.isDataPresent"></app-loading>
 </main>
