FMS-C19 Rename the paths to the subscription of the FMS data, so that it conforms to the VM's settings

--- a/fms-gui-client/src/app/main/main.component.html
+++ b/fms-gui-client/src/app/main/main.component.html
@@ -32,6 +32,16 @@
             <mat-error *ngIf="addressForm.controls['port'].invalid">{{ errorMessage }}</mat-error>
           </mat-form-field>
 
+          <!-- Path -->
+          <!--
+          <mat-form-field>
+            <mat-label>Path</mat-label>
+            <label>
+              <input type="text" formControlName="path" matInput placeholder="">
+            </label>
+            <mat-error *ngIf="addressForm.controls['path'].invalid">{{ errorMessage }}</mat-error>
+          </mat-form-field>
+          -->
 
           <div class="grid-cols-2">
             <!-- TODO: Implement me -->
