Add offline functionality for icons and change background color of element on hover

--- a/fms-gui-client/src/app/status-panel/status-panel.component.html
+++ b/fms-gui-client/src/app/status-panel/status-panel.component.html
@@ -7,7 +7,7 @@
       <!-- Contains the status bytes, which indicate if something is on or off -->
       <h2>Flags</h2>
       <div class="grid grid-cols-4 grid-gap-sm">
-        <div *ngFor='let item of Utils.castToArrayNameValuePair(fmsDataService.getValue("status/flags1"))'>
+        <div class="status-element" *ngFor='let item of Utils.castToArrayNameValuePair(fmsDataService.getValue("status/flags1"))'>
           <span
             class="badge"
             [ngClass]="{
