--- a/fms-gui-client/src/app/nav/nav.component.html
+++ b/fms-gui-client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <mat-nav-list *ngIf="navItems">
   <!-- Navigation items -->
   <mat-list-item *ngFor="let item of navItems" (click)="nav.click()">
-    <mat-icon matListIcon>{{item.icon}}</mat-icon>
+    <mat-icon matListIcon aria-hidden="true">{{item.icon}}</mat-icon>
     <a [routerLink]="['/' + item.path]" #nav>{{item.title}}</a>
   </mat-list-item>
 </mat-nav-list>
