FMS-C21 Implement change detection of values, add to HTML Template

--- a/fms-gui-client/src/app/cards/cards.component.html
+++ b/fms-gui-client/src/app/cards/cards.component.html
@@ -11,7 +11,7 @@
         </mat-card-header>
         <mat-card-content>
           <ul>
-            <li *ngFor="let item of Utils.castToArrayNameValuePair(card.value)">
+            <li *ngFor="let item of Utils.castToArray(card.value)">
               {{item.name}}: {{cardsService.getValue(item.value)}}
             </li>
           </ul>
