--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -38,6 +38,7 @@ $medium: 800px;
 
 .margin-1em { margin: 1em; }
 .margin-side-1em { margin: 0 1em;}
+.margin-left-0-5em { margin-left: 0.5em; }
 
 .grid { display: grid; }
 .grid-cols-2 { grid-template-columns: repeat(2, 1fr); }
